--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-table": "^8.17.3",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/react-query": "^1.2.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -34,8 +35,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
